[package]
name = "rftables"
version = "0.1.0"
authors = ["yamakaky"]

[dependencies]
enum_primitive = "0.1"
error-chain = "0.5"
libc = "0.2"
libmnl-sys = { git = "https://github.com/Yamakaky/libmnl-sys"}
libnftnl-sys = { git = "https://github.com/Yamakaky/libnftnl-sys" }
num = "0.1"

[[bin]]
name = "rft"
